# Quadruped_Robot_Control_OCS2

./: README.md
foot_sensor_tools/: CMakeLists.txt  package.xml
foot_sensor_tools/script/: foot_detect_sensor.py
imu_tools/: CMakeLists.txt  package.xml
legged_controllers/include/legged_controllers/: legged_controller.h
legged_controllers/launch/: load_controller.launch
legged_controllers/src/: legged_controller.cpp  target_trajectories_publisher.cpp
legged_examples/legged_unitree/unitree_hw/: CMakeLists.txt  package.xml
legged_examples/legged_unitree/unitree_hw/include/unitree_hw/: hardware_interface.h  udp.h  unitree_motor.h
legged_examples/legged_unitree/unitree_hw/launch/: unitree_hw.launch
legged_examples/legged_unitree/unitree_hw/src/: hardware_interface.cpp
legged_hw/: CMakeLists.txt  package.xml
legged_hw/include/legged_hw/: hardware_interface.h
legged_hw/src/: control_loop.cpp
legged_interface/src/: legged_interface.cpp
ocs2_pinocchio/ocs2_centroidal_model/src/: CentroidalModelRbdConversions.cpp
ocs2_robotic_examples/ocs2_legged_robot/config/command/: gait.info  reference.info
ocs2_robotic_examples/ocs2_legged_robot/config/mpc/: task.info
ocs2_robotic_examples/ocs2_legged_robot_ros/launch/: legged_robot_sqp.launch
ocs2_robotic_examples/ocs2_legged_robot_ros/src/visualization/: LeggedRobotVisualizer.cpp
ocs2_ros_interfaces/src/command/: TargetTrajectoriesRosPublisher.cpp
ocs2_ros_interfaces/src/common/: RosMsgConversions.cpp
ocs2_ros_interfaces/src/mrt/: MRT_ROS_Dummy_Loop.cpp
